# zmk-config2

./: build.yaml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/arm/nice_nano/: CMakeLists.txt  nice_nano.dts  nice_nano_v2.dts  nice_nano_v2_defconfig
app/boards/shields/corne/: corne.dtsi  corne.zmk.yml  corne_right.overlay
app/boards/shields/corne/boards/: nice_nano_v2.overlay
app/boards/shields/trackball_pim447/: trackball_pim447.overlay
app/cmake/: zmk_config.cmake
app/drivers/i2c/: i2c.h  i2c_nrfx_twi.c
app/drivers/zephyr/dts/bindings/sensor/: pimoroni,trackball_pim447.yaml
app/dts/bindings/: vendor-prefixes.txt
config/: Kconfig  Kconfig.defconfig  Kconfig.shield  corne.conf  corne.dtsi  corne.keymap  corne.zmk.yml  corne_right.overlay  prj.conf  prj_right.conf  trackball_pim447.conf  west.yml
config/boards/: nice_nano_v2.overlay
config/boards/shields/splitmouse/: Kconfig.defconfig  Kconfig.shield  pimtrackball.keymap  pimtrackball.overlay
config/boards/shields/trackball_pim447/: Kconfig.defconfig  Kconfig.shield  trackball_pim447.overlay  trackball_pim447.zmk.yml
